2004-10-21  Chris Toshok  <toshok@ximian.com>

	* DebuggingService.cs: return String.Empty from CurrentFilename if
	the frame's SourceAddress is null.  Likewise, return -1 from
	CurrentLineNumber in this case.

2004-06-25  Todd Berman  <tberman@off.net>

	* DebuggingService.cs: sync with cvs debugger.

2004-06-18  Todd Berman  <tberman@off.net>

	* Makefile.am: use pkg-config properly.

2004-06-12  Martin Baulig  <martin@ximian.com>

	* Makefile.am: enable the debugger again.
	* DebuggingService.cs: Make it work wit the latest debugger from CVS.

2004-04-29  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: dont build debugger for now. will add info in configure
	soon
	* DebuggingService.cs: bring up to speed with debugger from cvs.

2004-04-04  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: change to .addin.xml for i18n
	* MonoDevelopDebugger.addin.xml: mv
	* MonoDevelopDebugger.addin: rm

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* Gui/DebuggerVariablePad.cs: use AmbienceService to convert from
	System.Int32 to int, etc.

2004-03-24  John Luke  <jluke@cfl.rr.com>

	* Makefile.am: addin was not being cp'd to build/AddIns/.

2004-03-22  John Luke  <jluke@cfl.rr.com>

	* Makefile.am: move FILES and EXTRA_DIST outside of if block
