@@ -1,3 +1,12 @@
+2004-10-22  Chris Toshok  <toshok@ximian.com>
+
+	* MonoDevelopDebugger.addin.xml: add DebuggerStackTracePad to the
+	views.
+
+	* Gui/DebuggerStackTracePad.cs: new file.
+
+	* Makefile.am (FILES): add DebuggerStackTracePad.cs
+
 2004-10-21  Chris Toshok  <toshok@ximian.com>
 
 	* DebuggingService.cs: return String.Empty from CurrentFilename if
